Bug 375258 - Ada import probably crashes if enums are used before defined
Summary: Ada import probably crashes if enums are used before defined
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-18 21:59 UTC by Ralf Habacker
Modified: 2017-01-18 22:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.2 (KDE Applications 16.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-01-18 21:59:18 UTC
With bug 373382 and bug 375524 an import crash happens when enums are used before defined. Looking at the importer source this crash probably happens also with ada imports.
Comment 1 Ralf Habacker 2017-01-18 22:10:46 UTC
Git commit e0ab3633816c6b0aed6c11a718ba5db4b35eb9b7 by Ralf Habacker.
Committed on 18/01/2017 at 22:07.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Ada import probably crashes if enums are used before defined'.
FIXED-IN:2.21.2 (KDE Applications 16.12.2)

M  +4    -1    umbrello/codeimport/adaimport.cpp

https://commits.kde.org/umbrello/e0ab3633816c6b0aed6c11a718ba5db4b35eb9b7