Fix 'Ada import probably crashes if enums are used before defined'.

BUG:375258
FIXED-IN:2.21.2 (KDE Applications 16.12.2)