umbrello/codeimport/adaimport.cpp
@@ -329,8 +329,11 @@ bool AdaImport::parseStmt()
             UMLObject *ns = Import_Utils::createUMLObject(UMLObject::ot_Enum,
                             name, currentScope(), m_comment);
             UMLEnum *enumType = ns->asUMLEnum();
+            if (enumType == 0)
+                enumType = Import_Utils::remapUMLEnum(ns, enumType);
             while ((next = advance()) != QLatin1String(")")) {
-                Import_Utils::addEnumLiteral(enumType, next, m_comment);
+                if (enumType != 0)
+                    Import_Utils::addEnumLiteral(enumType, next, m_comment);
                 m_comment.clear();
                 if (advance() != QLatin1String(","))
                     break;
